 - API: WindowConfiguration supports a new property: shape. Shape tells which parts of a ScreenDockWindow are visible, and which are not.
 
[v1.1.2p4]
 - API: Implemented all the "aside" methods in the toolbar extension
 - API: AbstractCDockable.setLocationAside no longer sets a generic CLocation but a CExtendedModeLocation, which will make the LocationManager to access the original DockableProperty. This makes the method using placeholders more efficiently.
 - API: Border of FlapWindow is now customizeable
 
[v1.1.2p5]
 - Bugfix: the glass extension could produce a NullPointerException when using only the Core API.
 - API: Added an annoying dialog that pops up when using the Core API, warning the developer that the much better Common API is available.
 - Bugfix: If a dockable was already marked as the "focused dockable", but the event of registering the dockable was delayed, then the already present DockTitles of said Dockable were not informed about the focus-state.
 ! API: The way in which LayerPriorities are merged has been changed - clients should not be affected by this change.
 - API: Default background color of ToolbarContainerDockStation is now "null", but clients can also set a custom color.
 
[v1.1.2p6]
 - API: added a new feature where clients can change the behavior of externalized CDockables: they are no longer stacked, but splitted.
 - API: added a tutorial explaining the new feature of externalized CDockables.   
 ! API: several changes to the API of CGridArea and ModeArea in order to implement the new feature (see above)
 - API: new ExternalizingCGridArea, includes some factories.
 ! API: added property "isNormalizeable" to CDockable and listeners, this property should not be used by clients however.
 
[v1.1.2p6a]
 - API: ToolbarDockStation is no longer transparent per default, clients can make it transparent with the ThemeManager, the constant BackgroundPaint.TRANSPARENT and the key 'ThemeManager.BACKGROUND_PAINT + ".station.toolbar"'